fix mistakes in class jumpUp

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -34,6 +34,9 @@
         .bground {
             opacity: 0.7;
         }
+        p{
+            position: absolute;
+        }
     }
 
     @media (min-width: 480px) {
